fixed date issue and aligned add button in journal

--- a/src/components/Journal/Journal.css
+++ b/src/components/Journal/Journal.css
@@ -1,6 +1,7 @@
 .journals {
     padding-top: 100px;
     padding-bottom: 74.5px;
+    padding-left: 30px;
     
 }
 
@@ -17,7 +18,7 @@
 }
 
 .modal {
-        padding-top: 200px;
+    padding-top: 200px;
        margin:0 auto;
        display:table;
        position: absolute; 
